--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,175 +1,753 @@
+/* --------------------------------------
+-----   Reset   -----
+------------------------------------------*/
+
+html,
+body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong,
+sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas,
+details, figcaption, figure, footer, header, hgroup, menu, nav, section,
+summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent
+}
+
 body {
-    font-family: 'Georgia', Georgia, Microsoft Yahei,Hiragino Sans GB,WenQuanYi Micro Hei,sans-serif;
-    line-height: 1.5;
-    text-rendering: optimizeLegibility;
+    line-height: 1
 }
 
-h1, .h1 {
-    font-size: 2.6em;
+article, aside, details, figcaption, figure, footer, header, hgroup,
+menu, nav, section {
+    display: block
 }
 
-h2, .h2 {
-    font-size: 2.3em;
+nav ul {
+    list-style: none
 }
 
-h3, .h3 {
-    font-size: 1.15em;
+blockquote, q {
+    quotes: none
 }
 
-h4, h5, h6 {
-    font-size: 1em;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Open Sans Condensed', sans-serif;
-    line-height: 1;
+blockquote:before, blockquote:after, q:before, q:after {
+    content: none
 }
 
 a {
-	color: #54D0ED;
-	text-decoration: none;
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent
+}
+
+ins {
+    background-color: #ff9;
+    color: #000;
+    text-decoration: none
+}
+
+mark {
+    background-color: #ff9;
+    color: #000;
+    font-style: italic;
+    font-weight: bold
+}
+
+del {
+    text-decoration: line-through
+}
+
+abbr[title], dfn[title] {
+    border-bottom: 1px dotted;
+    cursor: help
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0
+}
+
+input, select {
+    vertical-align: middle
+}
+
+.clearfix:before, .clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+html, body {
+    height: 100%;
+    overflow-x: hidden;
+}
+
+/* --------------------------------------
+-----   COLORS   -----
+------------------------------------------*/
+
+/* These rules are grouped based on color shades */
+
+/* Selection */
+
+::selection {
+    background: #FDF2E3;
+    color: #291A03;
+}
+
+::-moz-selection {
+    background: #FDF2E3;
+    color: #291A03;
+}
+
+/* Main text & navigation buttons */
+
+#main-title, #main-subtitle {
+    color: #FBE3C4;
+}
+
+#main-nav a, .button {
+    color: #FBE3C4;
+    border: 2px solid #FBE3C4;
+}
+
+#main-nav a:hover, #main-nav a.selected {
+    background: #FBE3C4;
+    color: #291A03;
+}
+
+/* Regular buttons & img captions */
+
+.button {
+    border-color: #B59A65;
+    color: #B59A65;
+}
+
+.button:hover {
+    border-color: #B59A65;
+    background: #B59A65;
+    color: #fff;
+}
+
+figcaption {
+    background: #B59A65;
+    background: rgba(181, 154, 101, .5);
+}
+
+/* Basic links */
+
+a:hover, #posts-list a:hover {
+    color: #D4A16B;
+    border-color: #D4A16B;
+}
+
+/* --------------------------------------
+-----   TYPOGRAPHY   -----
+------------------------------------------*/
+
+/* Font families are groupped here - individual styles are below */
+
+body,
+#posts-list h3 {
+    font-family: 'Fenix', Georgia, serif;
+}
+
+h1, h2, h3, h4, h5, h6, .section-subtitle, #main-nav a, .button, figcaption,
+#posts-list time, .main-footer, .projects-list span {
+    font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
+}
+
+#main-title, #main-subtitle {
+    font-family: 'Playfair Display', Georgia, serif;
+}
+
+/* Basic typographic elements */
+
+body {
+    font-size: 1em;
+    line-height: 1.5em;
+    color: #222;
+}
+
+a {
+    text-decoration: none;
+    color: #aaa;
+    border-bottom: 1px dotted #ccc;
+}
+
+p {
+    margin: 1em 0;
+}
+
+ul {
+    list-style: square inside;
+    margin: 20px 0;
+}
+
+ol {
+    list-style: decimal-leading-zero inside;
+    margin: 20px 0;
+}
+
+pre {
+    background: none repeat scroll 0 0 #F7F7F7;
+    border: 5px solid #E9E9E9;
+    font-family: Consolas, Courier, Monaco, monospace;
+    font-size: 12px;
+    line-height: 19px;
+    overflow-x: auto;
+    padding: 20px;
+}
+
+table {
+    width: 100%;
+    border: 1px solid #e9e9e9;
+    text-align: left;
+}
+
+table thead h4 {
+    font-size: 10px;
+    line-height: 18px;
+    text-transform: uppercase;
+    margin-bottom: 0;
+}
+
+table tr {
+    border-top: 1px solid #e9e9e9;
+}
+
+table thead tr {
+    border-top: none;
+}
+
+table th, table td {
+    min-height: 41px;
+    padding: 10px 14px 8px;
+    border-right: 1px solid #e9e9e9;
+}
+
+sub, sup {
+    font-size: .7em;
+    line-height: .7em;
+}
+
+sub {
+    vertical-align: bottom;
+}
+
+sup {
+    vertical-align: top;
+}
+
+var {
+    font-family: Consolas, Courier, Monaco, monospace;
 }
 
 blockquote {
-	padding-left: 1.5em;
-	border-left: 4px solid #54D0ED;
-	margin-left: 0;
+    border-left: 3px solid #b3b3b3;
+    padding-left: 50px;
+    margin: 40px 0;
 }
 
-code, pre {
-	font-family: Monaco,Menlo,Consolas,"Courier New",monospace;
-	font-size: 0.8em;
-}
-
-code, .codehilite {
-	border: 1px solid #ddd;
-	background: #fafafa;
-}
-
-.codehilite {
-	padding: 0 0.4em;
-}
-
-.sidebar {
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	background: #FF4A46;
-}
-
-.sidebar a {
-	color: #fafafa;
-}
-
-.sidebar .top,
-.sidebar .bottom {
-	padding: 2em;
-}
-
-.sidebar .top {
-	padding-top: 2.8em;
-	height: auto;
-	background: #181D2B;
-}
-
-.sidebar .top a {
-	color: #929eac;
-}
-
-.sidebar .bottom a {
-	color: #facac7;
-}
-
-.sidebar a:hover {
-	color: #fff;
-}
-
-.blog-title {
-	font-size: 2.8em;
-}
-
-.blog-desc {
-	display: block;
-	font-size: 0.4em;
-	margin: 0 0 2em;
-}
-
-ul.menu {
-	padding-left: 0;
-}
-
-.menu li {
-	list-style: none;
-}
-
-.nav a {
-	font-size: 1.5em;
-}
-
-.contact li {
-	display: inline-block;
-	padding-right: 0.5em;
-	height: 2em;
-}
-
-.contact a {
-	border: 2px solid #929eac;
-	padding: 0.2em 0.5em;
-	border-radius: 2px;
-}
-
-.content {
-	margin-left: 29.1667%;
-}
-
-.content-inner {
-	padding: 0 5%;
-}
-
-.post-meta {
-    display: inline-block;
-    font-family: 'Open Sans', sans-serif;
+blockquote > p {
     font-size: 1em;
-    color: #9EABB3;
+    line-height: 1.5em;
+    font-weight: 300;
 }
 
-.post-list {
-	margin-top: 2em;
-	padding: 0;
+blockquote cite {
+    color: #999999;
+    display: inline-block;
+    font-size: 20px;
+    font-style: italic;
+    margin: 25px 0 15px;
 }
 
-.post-list li{
-	list-style: none;
-}
-article header h2 {
-	margin-bottom: 0.2em;
-}
-
-article header {
-	margin-bottom: 2em;
+q {
+    border-left: 3px solid #b3b3b3;
+    font-style: italic;
+    padding-left: 15px;
 }
 
-article img {
-	max-width: 100%;
-	display: block;
-	box-shadow: #999 2px 2px 4px;
+.post-content h3 {
+    font-size: 16px;
+    line-height: 22px;
+    text-transform: uppercase;
 }
 
-.content footer {
-	margin: 4em 0 1em;
+h4 {
+    font-size: 14px;
+    margin: 25px 0 10px;
+    text-transform: uppercase;
+    color: #666;
 }
 
-.content footer p {
-	display: inline-block;
-	margin:0;
-	font-size: 0.8em;
+h4 + p {
+    margin-top: 0;
 }
 
-.post-title {
-	font-size: 1.8em;
-	margin-top: 0;
+/* Main header */
+
+#main-title, #main-subtitle {
+    display: block;
 }
-.post-title a {
-	color: #181D2B;
+
+#main-title {
+    font-size: 52px;
+    line-height: 52px;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
+#main-subtitle {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 400;
+}
+
+/* Section titles */
+
+.section-header {
+    margin-bottom: 15px;
+}
+
+.section-title, h3.section-title {
+    font-size: 18px;
+    line-height: 24px;
+    color: #212121;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.section-subtitle {
+    font-size: 12px;
+    line-height: 18px;
+    color: #ccc;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: block;
+    margin-top: 5px;
+}
+
+/* --------------------------------------
+-----   STRUCTURE   -----
+------------------------------------------*/
+
+/* Typographic elements or colors will appear in this section as well */
+
+/* ---------------------
+-----   Navigation   -----
+-------------------------*/
+
+.main-header {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    /*background-image: url(../img/bg.jpg);  main bg image */
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: table;
+}
+
+#main-nav {
+    margin-top: 35px;
+}
+
+#main-nav a, .button {
+    font-size: 14px;
+    line-height: 14px;
+    padding: 12px 24px 11px;
+    display: inline-block;
+    margin: 7px;
+    text-transform: uppercase;
+}
+
+/* Button (can be used in any other context ) */
+
+.button {
+    margin: 0 7px 0 0;
+}
+
+/*----------------------
+-----   Homepage "header"   -----
+-------------------------*/
+
+.main-header.home {
+    position: fixed;
+    height: 100%;
+}
+
+.vertical-container {
+    background-color: #474B4F;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+
+/* ---------------------
+-----   Regular header   -----
+-------------------------*/
+
+.main-header.regular {
+    height: 250px;
+}
+
+.main-header.regular #main-title {
+    margin-bottom: 10px;
+}
+
+.main-header.regular .vertical-container {
+    text-align: left;
+}
+
+.main-header.regular #main-nav {
+    float: right;
+    margin-top: 25px;
+}
+
+.main-header.regular header {
+    float: left;
+}
+
+/* ---------------------
+-----   Content structure   -----
+-------------------------*/
+
+.wrapper {
+    max-width: 1040px;
+    margin: auto;
+    padding: 0 50px;
+}
+
+.main-content .wrapper {
+    margin: 50px auto 100px;
+}
+
+.page-wrap {
+    min-height: 100%;
+    margin-bottom: -60px; /* footer heigth */
+}
+
+.page-wrap:after {
+    content: "";
+    display: block;
+    height: 60px; /* footer heigth */
+}
+
+.page-content {
+    margin-top: 50px;
+}
+
+.main-content .page-content:first-child {
+    margin-top: 0;
+}
+
+.one-half {
+    width: 45%;
+}
+
+.one-half.first {
+    float: left;
+}
+
+.one-half.last {
+    float: right;
+}
+
+/* --------------------------------------
+-----   BLOG   -----
+------------------------------------------*/
+
+#posts-list {
+    margin-top: 35px;
+}
+
+#posts-list li {
+    border-top: 1px solid #e9e9e9;
+    display: block;
+}
+
+#posts-list li:first-child {
+    border-top: none;
+}
+
+#posts-list time {
+    font-size: 12px;
+    line-height: 12px;
+    color: #ccc;
+    width: 115px;
+    text-transform: uppercase;
+    float: left;
+    padding-top: 16px;
+}
+
+#posts-list time:after {
+    display: block;
+    content: "";
+    width: 5px;
+    height: 5px;
+    background: #ccc;
+    float: right;
+    margin: 3px 15px 0 0;
+}
+
+#posts-list a {
+    color: #222;
+    float: left;
+    padding: 6px 0 13px;
+    border: none;
+}
+
+#posts-list h3 {
+    font-weight: 400;
+}
+
+.post-nav {
+    margin-top: 70px;
+}
+
+/* ---------------------
+-----   List   -----
+-------------------------*/
+
+/* --------------------------------------
+-----   FOOTER   -----
+------------------------------------------*/
+
+.main-footer {
+    background: #323538;
+    display: table;
+    position: relative;
+    width: 100%;
+    height: 60px;
+}
+
+.main-footer .vertical-container {
+    text-align: left;
+    background: transparent;
+}
+
+.main-footer {
+    font-size: 12px;
+    text-transform: uppercase;
+    line-height: 12px;
+    color: #fff;
+}
+
+.copy {
+    float: left;
+    margin: 0;
+}
+
+.social {
+    margin: 0;
+    float: right;
+}
+
+.social li {
+    list-style: none;
+    display: inline;
+    margin: 0 10px;
+}
+
+.social li:last-child {
+    margin-right: 0;
+}
+
+.social a {
+    border: transparent;
+    color: #fff;
+}
+
+/* --------------------------------------
+-----   OTHER   -----
+------------------------------------------*/
+
+/* ---------------------
+-----   Figures   -----
+-------------------------*/
+
+img {
+    max-width: 100%;
+    height: auto;
+    vertical-align: bottom;
+}
+
+iframe {
+    max-width: 100%;
+}
+
+figure {
+    position: relative;
+    margin: 40px 0;
+}
+
+figcaption {
+    bottom: 10px;
+    color: #fff;
+    font-size: 12px;
+    line-height: 12px;
+    padding: 13px 16px 11px;
+    position: absolute;
+    right: 10px;
+    text-transform: uppercase;
+}
+
+/* ---------------------
+-----   Projects   -----
+-------------------------*/
+
+.projects-list {
+    margin-top: 30px;
+    margin-left: -20px;
+    width: 110%;
+}
+
+.projects-list li {
+    float: left;
+    margin: 20px;
+    list-style: none;
+}
+
+.projects-list a {
+    position: relative;
+    display: inline-block;
+    color: #fff;
+    border: none;
+}
+
+.projects-list .caption {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #333;
+    background: rgba(34, 34, 34, .6);
+    opacity: 0;
+}
+
+.projects-list .caption > div {
+    position: absolute;
+    bottom: 10px;
+    left: 15px;
+}
+
+.projects-list h4 {
+    font-size: 18px;
+    line-height: 18px;
+    color: #fff;
+    margin: 0 0 -5px 0;
+    font-weight: 400;
+}
+
+.projects-list span {
+    font-size: 12px;
+    line-height: 12px;
+    color: #ccc;
+    text-transform: uppercase;
+    font-weight: 400;
+}
+
+.projects-list a:hover {
+    box-shadow: 6px 5px 0 0 #ccc;
+}
+
+.projects-list a:hover .caption {
+    opacity: 1;
+}
+
+/* ---------------------
+-----   Animations   -----
+-------------------------*/
+
+a,
+#posts-list li, #posts-list time, .projects-list .caption {
+    -webkit-transition: all 150ms linear;
+    transition: all 150ms linear;
+}
+
+/* ---------------------
+-----   A bit of responsiveness   -----
+-------------------------*/
+
+@media all and (max-width: 840px) {
+
+    .main-header.regular {
+        height: auto;
+    }
+
+    .main-header.regular .vertical-container {
+        padding: 38px 0;
+    }
+
+    .main-header.regular .vertical-container, .main-footer .vertical-container {
+        text-align: center;
+    }
+
+    .main-header.regular header, .main-header.regular #main-nav, .copy,
+    .social {
+        float: none;
+    }
+
+    .wrapper {
+        padding: 0 25px;
+    }
+
+    .copy {
+        margin: 10px;
+    }
+
+    .one-half {
+        width: 100%;
+    }
+
+    #posts-list time {
+        display: none;
+    }
+}
+
+/* If you're using a "wacky" portfolio grid, it should be fixed when the
+        browser resizes below 1040px */
+
+@media all and (max-width: 1140px) {
+
+    .projects-list {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .projects-list li, .projects-list a {
+        float: none;
+        max-width: 100%;
+    }
+
+    .projects-list li {
+        margin: 20px 0 0 0 !important;
+    }
 }
